feature/changed favicon

--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="manifest" href="{{asset "/manifest.json"}}">
-  <link rel="shortcut icon" href="{{asset "/img/favicon.ico"}}">
+  <link rel="shortcut icon" href="{{asset "/img/logo/angular.png"}}">
   <link rel="icon" sizes="128x128" href="{{asset "/img/icon_128.png"}}">
 
   <link rel="stylesheet" href="{{asset 'assets/css/main.css'}}">
