--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -16,7 +16,7 @@
 
   <link rel="manifest" href="{{asset "/manifest.json"}}">
   <link rel="shortcut icon" href="{{asset "/img/logo/angular.png"}}">
-  <link rel="icon" sizes="128x128" href="{{asset "/img/icon_128.png"}}">
+  <link rel="icon" sizes="128x128" href="{{asset "/img/logo/angular.png"}}">
 
   <link rel="stylesheet" href="{{asset 'assets/css/main.css'}}">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,,600,800,900,300,200" rel="stylesheet">
