feature/added google analitics and ghost search key+url

--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -43,6 +43,15 @@
 
   {{ghost_foot}}
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19102604-15"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-19102604-15');
+</script>
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -59,8 +68,8 @@
 
 <script type="text/javascript">
     let ghostSearch = new GhostSearch({
-        key: 'd125b81e057f3c2777a56f542a', // This is just a demo key. Replace the key with a real one. See Step 3.
-        url: 'http://localhost:2389',
+        key: '57eecfb7f0398659088427c6f0', // This is just a demo key. Replace the key with a real one. See Step 3.
+        url: 'https://angularexpo.com',
         input: '#my-custom-input',
         results: '#my-custom-results',
         options: {
@@ -99,6 +108,7 @@
       }
     }
     window.addEventListener("scroll", yScroll);
+
 </script>
 
 
