feature/changed button text + fixed header illustration

--- a/index.hbs
+++ b/index.hbs
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="col-lg-8 d-lg-block d-none">
-          <img src="{{asset "/img/illustratio_header.svg"}}" alt="asd" class="image-svg d-lg-block d-none">
+          <img src="{{asset "/img/illustration_header.svg"}}" alt="asd" class="image-svg d-lg-block d-none">
           <div class="white-space">
 
           </div>
