--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -13,7 +13,7 @@
     <p class="card-text">Material Dashboard PRO Angular 8 is a Premium Material Bootstrap 4 Admin with a fresh, new design inspired by Google's Material Design. It is based on the popular Bootstrap framework and comes packed with multiple third-party plugins. All components are built to fit perfectly with each other while aligning to the material concepts.</p>
   </div>
   <div class="card-footer">
-      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Read more</a>
+      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">See Details</a>
 
   </div>
 </div>
@@ -30,7 +30,7 @@
      <p class="card-text">Light Bootstrap Dashboard PRO Angular is a Bootstrap Admin Theme designed to look simple and beautiful. Forget about boring dashboards and grab yourself a copy to kickstart new project! It is the easiest way to save time and money for your development.</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Read more</a>
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">See Details</a>
 
   </div>
 </div>
