--- a/assets/scss/custom/_misc.scss
+++ b/assets/scss/custom/_misc.scss
@@ -3,6 +3,7 @@ body{
   font-family: 'Roboto', sans-serif;
   font-size: $font-size-default;;
   line-height: 1.428571429;
+  overflow-x: hidden;
 }
 a{
   color: $text-primary;
@@ -19,7 +20,6 @@ a{
 .image-svg{
   width: 1000px;
   position: absolute;
-  margin-top: -60px;
   right: 0;
   z-index: -1;
 }
@@ -43,7 +43,10 @@ a{
 .white-space{
   background-color: #fdfcff;
   width: 10000px;
-  height: 570px;
+  height: 706px;
   position: absolute;
   right: -10000px;
+}
+.image-svg, .white-space{
+  margin-top: -149px;
 }
