--- a/page-blog.hbs
+++ b/page-blog.hbs
@@ -5,7 +5,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          {{#get "posts" filter="tags:angular"}}
+          {{#get "posts" filter="tags:blog"}}
           <div class="row">
             <div class="col-lg-6 col-md-12 col-12">
               {{> post-creativetim }}
@@ -16,11 +16,11 @@
               </div>
             {{/foreach}}
           </div>
-
-
           {{ pagination }}
 
           {{/get}}
+
+
         </div>
         <div class="col-md-4">
           <div class="row">
