--- a/partials/post.hbs
+++ b/partials/post.hbs
@@ -20,6 +20,6 @@
     <p class="card-text">{{excerpt characters="150"}}...</p>
   </div>
   <div class="card-footer">
-    <a target="_blank" class="btn btn-outline-danger btn-round" href="{{ url }}">See Details</a>
+    <a class="btn btn-outline-danger btn-round" href="{{ url }}">See Details</a>
   </div>
 </div>
