--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -18,7 +18,7 @@
       </ul>
       <ul class="nav-social navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="{{blog}}" class="nav-link">Blog</a>
+          <a href="{{@site.url}}/blog/" class="nav-link">Blog</a>
         </li>
         <li class="nav-item">
           <a href="https://www.facebook.com/AngularExpo/" target="_blank" class="nav-link"><i class="fab fa-facebook-f"></i></a>
