--- a/assets/scss/custom/_subscribe-area.scss
+++ b/assets/scss/custom/_subscribe-area.scss
@@ -37,11 +37,11 @@
         font-weight: 400;
         color: $text-primary;
         border: none;
-        border-bottom: 1px solid #D8D8D8;
         font-size: $font-size-default;;
         width: 60%;
         border-radius: 0;
         padding: 0;
+        margin-left: 18px;
       }
       .btn-submit{
         position: absolute;
