--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7184,7 +7184,8 @@ a {
       font-size: 14px;
       color: #223464;
       font-weight: lighter;
-      line-height: 24px; }
+      line-height: 24px;
+      margin-top: 10px; }
   .card.post-card .card-img-top {
     height: unset; }
   .card.post-card .btn {
