--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -17,7 +17,7 @@
       </span>
     </div>
     <a class="card-title" target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
-    <p class="card-text">Material Dashboard PRO Angular 8 is a Premium Material Bootstrap 4 Admin with a fresh, new design inspired by Google's Material Design. It is based on the popular Bootstrap framework and comes packed with multiple third-party plugins.</p>
+    <p class="card-text">Material Dashboard PRO Angular 8 is a Premium Material Bootstrap 4 Admin with a fresh, new design inspired by Google's Material Design. It is based on the popular Bootstrap framework.</p>
   </div>
   <div class="card-footer">
       <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">See Details</a>
@@ -41,7 +41,7 @@
       </span>
     </div>
     <a class="card-title" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a>
-     <p class="card-text">Light Bootstrap Dashboard PRO Angular is a Bootstrap Admin Theme designed to look simple and beautiful. Forget about boring dashboards and grab yourself a copy to kickstart new project! It is the easiest way to save time and money for your development.</p>
+     <p class="card-text">Light Bootstrap Dashboard PRO Angular is a Bootstrap Admin Theme designed to look simple and beautiful. Forget about boring dashboards and grab yourself a copy to kickstart new project!</p>
   </div>
   <div class="card-footer">
     <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">See Details</a>
