--- a/index.hbs
+++ b/index.hbs
@@ -9,17 +9,17 @@
           <img alt="Angular Expo" src="{{asset "/img/logo/angular.png"}}" height="100" width="100" style="margin-top: 100px">
           <h1 class="text-title">{{@site.title}}</h1>
           <p class="text-description">{{@site.description}}</p>
-          <div id="mc_embed_signup">
-            <form action="//angularexpo.us14.list-manage.com/subscribe/post?u=20206c0829ddb0efe4d35bc7a&amp;id=c32002db8f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
+          <div id="mc_embed_signup1">
+            <form action="//angularexpo.us14.list-manage.com/subscribe/post?u=20206c0829ddb0efe4d35bc7a&amp;id=c32002db8f" method="post" id="mc-embedded-subscribe-form1" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll1">
                 <div class="form-group form-subscribe form-input">
-                  <input type="text" placeholder="Your email" class="form-control required email text-input" id="mce-EMAIL" name="EMAIL">
-                  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-round btn-danger btn-submit btn-sm submit-button">
+                  <input type="text" placeholder="Your email" class="form-control required email text-input" id="mce-EMAIL1" name="EMAIL">
+                  <button type="submit" name="subscribe" id="mc-embedded-subscribe1" class="btn btn-round btn-danger btn-submit btn-sm submit-button">
                     Subscribe
                   </button>                </div>
-              	<div id="mce-responses" class="clear">
-              		<div class="response" id="mce-error-response" style="display:none"></div>
-              		<div class="response" id="mce-success-response" style="display:none"></div>
+              	<div id="mce-responses1" class="clear">
+              		<div class="response" id="mce-error-response1" style="display:none"></div>
+              		<div class="response" id="mce-success-response1" style="display:none"></div>
               	</div>
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_20206c0829ddb0efe4d35bc7a_c32002db8f" tabindex="-1" value=""></div>
               </div>
