--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -44,7 +44,7 @@
         <h5 class="footer-title">More Info</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="{{@site.url}}/advertise/">Advertise</a></li>
-          <li class="nav-item"><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
+          <!-- <li class="nav-item"><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li> -->
           <li class="nav-item"><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit product</a></li>
         </ul>
       </div>
