--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -3,14 +3,14 @@
   <div class="col-lg-6 col-md-12 col-12">
     {{> post-creativetim }}
   </div>
-  {{#get "posts" filter="tags:-[blog]" include="tags"}}
 
-    {{#foreach posts from="1" to="9"}}
+    {{#foreach posts}}
+    {{^has tag="blog"}}
       <div class="col-lg-6 col-md-12 col-12">
           {{> post}}
       </div>
+      {{/has}}
     {{/foreach}}
-  {{/get}}
 
 </div>
 
