feature/fix posts error

--- a/page-blog.hbs
+++ b/page-blog.hbs
@@ -5,18 +5,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          {{#get "posts" filter="tags:blog"}}
           <div class="row">
-            {{#foreach posts  from="1" to="5"}}
+            {{#foreach posts}}
               <div class="col-lg-6 col-md-12 col-12">
                   {{> post}}
               </div>
             {{/foreach}}
           </div>
           {{ pagination }}
-
-          {{/get}}
-
 
         </div>
         <div class="col-md-4">
