--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -3,15 +3,11 @@
   <div class="col-lg-6 col-md-12 col-12">
     {{> post-creativetim }}
   </div>
-
-    {{#foreach posts  from="1" to="9"}}
-    {{^has tag="blog"}}
-      <div class="col-lg-6 col-md-12 col-12">
-          {{> post}}
-      </div>
-      {{/has}}
-    {{/foreach}}
-
+      {{#foreach posts }}
+        <div class="col-lg-6 col-md-12 col-12">
+            {{> post}}
+        </div>
+      {{/foreach}}
 </div>
 
 
