feature/seo modifications

--- a/assets/scss/custom/_misc.scss
+++ b/assets/scss/custom/_misc.scss
@@ -50,3 +50,10 @@ a{
 .image-svg, .white-space{
   margin-top: -149px;
 }
+
+h3{
+  font-size: 1.15rem;
+}
+h1, h2, h3, h4, h5{
+  color: $text-primary;
+}
