--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7115,6 +7115,12 @@ a {
 .image-svg, .white-space {
   margin-top: -149px; }
 
+h3 {
+  font-size: 1.15rem; }
+
+h1, h2, h3, h4, h5 {
+  color: #223464; }
+
 .card {
   width: 100%;
   overflow: hidden;
@@ -7190,6 +7196,8 @@ a {
     height: unset; }
   .card.post-card .btn {
     font-weight: 200; }
+  .card.post-card .card-body .container .card-title {
+    font-size: 24px; }
   .card.post-card .card-body .container p {
     color: #223464; }
   .card.recent-posts .card-header {
