--- a/partials/subscribe-area.hbs
+++ b/partials/subscribe-area.hbs
@@ -5,7 +5,7 @@
       products arrive!
     </p>
     <div id="mc_embed_signup">
-      <form action="//angularexpo.us14.list-manage.com/subscribe/post?u=20206c0829ddb0efe4d35bc7a&amp;id=c32002db8f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <form action="https://gmail.us13.list-manage.com/subscribe/post?u=be9d346a79e92adc148c28f46&id=aeed3f59ae&f_id=00f58be4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll" class="subscribe-input">
           <div class="form-input form-group form-subscribe">
             <input class="form-control required email text-input" type="email" id="mce-EMAIL" name="EMAIL" placeholder="Your Email...">
