--- a/index.hbs
+++ b/index.hbs
@@ -10,7 +10,7 @@
           <h1 class="text-title">{{@site.title}}</h1>
           <p class="text-description">{{@site.description}}</p>
           <div id="mc_embed_signup1">
-            <form action="//angularexpo.us14.list-manage.com/subscribe/post?u=20206c0829ddb0efe4d35bc7a&amp;id=c32002db8f" method="post" id="mc-embedded-subscribe-form1" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <form action="https://gmail.us13.list-manage.com/subscribe/post?u=be9d346a79e92adc148c28f46&id=aeed3f59ae&f_id=00f58be4f0" method="post" id="mc-embedded-subscribe-form1" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div id="mc_embed_signup_scroll1">
                 <div class="form-group form-subscribe form-input">
                   <input type="text" placeholder="Your email" class="form-control required email text-input" id="mce-EMAIL1" name="EMAIL">
